# covi_auth_lib

./: .gitignore  README.md  pyproject.toml
src/covi_auth_lib/: __init__.py
src/covi_auth_lib/adapters/: appium_adapter.py  playwright_adapter.py
src/covi_auth_lib/protocols/: authentication_provider.py  ui_interaction_protocol.py
src/covi_auth_lib/providers/: ldap_authentication_provider.py  sso_button_provider.py  username_password_provider.py  web_authentication_provider.py
src/covi_auth_lib/services/: login_service.py
